--- a/misc/nginx-conf/conf.d/default.conf
+++ b/misc/nginx-conf/conf.d/default.conf
@@ -5,16 +5,23 @@ server {
     access_log  /var/log/nginx/sampleapp.access.log;
     error_log  /var/log/nginx/sampleapp.error.log;
 
-    root   /var/www/html;
+    root   /var/www/html/public;
     index  index.html index.htm index.php;
 
-    location ~ \.php(/|$) {
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		fastcgi_pass phpfpm:9000;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-		fastcgi_index index.php;
-		include fastcgi_params;
+    location /css {
+      root /var/www/html/public;
     }
-    rewrite ^/(.*)$ /public/index.php/$1 last;
+
+    location / {
+        rewrite ^/(.*)$ /index.php/$1 last;
+    }
+
+    location ~ \.php(/|$) {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass phpfpm:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+		    fastcgi_index index.php;
+        include fastcgi_params;
+    }
 }
