--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,12 @@ services:
     environment:
     - APP_ENV=develop
     - APP_DEBUG="true"
+  db:
+    image: mysql:5.6
+    restart: always
+    volumes:
+      - ./misc/database:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - "3307:3306"
