Finish login and logout

--- a/misc/nginx-conf/conf.d/default.conf
+++ b/misc/nginx-conf/conf.d/default.conf
@@ -12,6 +12,10 @@ server {
       root /var/www/html/public;
     }
 
+    location /js {
+      root /var/www/html/public;
+    }
+
     location / {
         rewrite ^/(.*)$ /index.php/$1 last;
     }
