--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,8 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "ajv": "^6.4.0"
+    "ajv": "^6.4.0",
+    "bootstrap": "^3.3.7",
+    "jQuery": "^1.7.4"
   }
 }
