--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8080:80"
   phpfpm:
-    image: registry.cn-hangzhou.aliyuncs.com/reminz/php:5.6-fpm-root
+    image: registry.cn-hangzhou.aliyuncs.com/reminz/php:5.6-fpm
     volumes:
       - ./src:/var/www/html
       - ./misc/php-conf/php.ini:/usr/local/etc/php/conf.d/php.ini
