--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ./src:/var/www/html
       - ./misc/php-conf/php.ini:/usr/local/etc/php/conf.d/php.ini
       - ./misc/php-conf/www.conf:/usr/local/etc/php-fpm.d/www.conf
+      - ./misc/php-conf/pdo_mysql.so:/usr/local/lib/php/extensions/no-debug-non-zts-20131226/pdo_mysql.so
     environment:
     - APP_ENV=develop
     - APP_DEBUG="true"
